# NL-SRE-Semantico

./: .gitignore  Cargo.toml  README.md
data/latam/: SOURCES_REPORT.md
docs/paper/: NL-SRE-SEMANTICO-PAPER-SEPLN.tex
src/: lib.rs  main.rs
src/applog/: mod.rs
src/chars/: mod.rs
src/command_parser/: mod.rs
src/dictionary/: mod.rs
src/disambiguator/: mod.rs
src/grammar/: mod.rs
src/semantic/: mod.rs
src/tao/: mod.rs
src/uniform/: mod.rs
